Fix a search input height issue on Firefox

--- a/patterns/lfa-patterns/layout.styl
+++ b/patterns/lfa-patterns/layout.styl
@@ -345,6 +345,7 @@ body #rightbar
       cursor: pointer
       margin: 0
       padding: 0.75em
+      height: 3em
       border: 0
       border-radius: 0
       width: 100%
